--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"author": "Francois Rice",
 	"license": "ISC",
 	"dependencies": {
-		"node-sass": "^4.12.0"
+		"node-sass": "^4.14.1",
+		"showdown": "^1.9.1"
 	},
 	"devDependencies": {}
 }
